--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,24 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "a21ns1g4ts/filament-short-url": "^0.1.5",
+        "bezhansalleh/filament-exceptions": "^2.1",
+        "bezhansalleh/filament-shield": "^3.3",
+        "f9webltd/laravel-health-opcache": "^1.0",
+        "filament/filament": "3.3",
+        "filament/spatie-laravel-media-library-plugin": "^3.3",
+        "jeffgreco13/filament-breezy": "^2.6",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "saasykit/filament-oops": "^1.0",
+        "shuvroroy/filament-spatie-laravel-health": "^2.3",
+        "spatie/cpu-load-health-check": "^1.0",
+        "spatie/security-advisories-health-check": "^1.2",
+        "stechstudio/filament-impersonate": "^3.15",
+        "tomatophp/filament-language-switcher": "^1.0",
+        "tomatophp/filament-media-manager": "^1.0",
+        "tomatophp/filament-seo": "*",
+        "tomatophp/filament-users": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -34,7 +50,8 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
