--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "a21ns1g4ts/filament-short-url": "^0.1.5",
         "bezhansalleh/filament-exceptions": "^2.1.2",
         "bezhansalleh/filament-shield": "^3.3.5",
         "f9webltd/laravel-health-opcache": "^1.0.4",
@@ -17,12 +16,14 @@
         "jeffgreco13/filament-breezy": "^2.6",
         "laravel/framework": "^12.7.2",
         "laravel/tinker": "^2.10.1",
+        "owenvoke/blade-fontawesome": "^2.9",
         "saasykit/filament-oops": "^1.0",
         "schmeits/filament-character-counter": "^1.3",
         "shuvroroy/filament-spatie-laravel-health": "^2.3.5",
         "spatie/cpu-load-health-check": "^1.0.4",
         "spatie/security-advisories-health-check": "^1.2.1",
         "stechstudio/filament-impersonate": "^3.15",
+        "tomatophp/filament-api": "^1.0",
         "tomatophp/filament-artisan": "^1.0",
         "tomatophp/filament-developer-gate": "^1.0",
         "tomatophp/filament-language-switcher": "^1.0.6",
