--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "amidesfahani/filament-tinyeditor": "*",
         "bezhansalleh/filament-exceptions": "^2.1.2",
         "bezhansalleh/filament-shield": "^3.3.5",
         "f9webltd/laravel-health-opcache": "^1.0.4",
